--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -2,28 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="1dp">
 
     <com.khusainov.rinat.flickr.presentation.customview.SquareImageView
         android:id="@+id/photo_image_view"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/image"
         android:scaleType="centerCrop"
         android:src="@drawable/image_placeholder"
-        app:layout_constraintBottom_toTopOf="@id/owner_text_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/owner_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/photo_image_view"
-        app:layout_constraintStart_toStartOf="@id/photo_image_view"
-        app:layout_constraintTop_toBottomOf="@id/photo_image_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
