--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/home_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.view.HomeFragment">
+    tools:context=".presentation.ui.home.view.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/photos_recycler_view"
